# backend_public

./: README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: python-ci.yml
.github/workflows/: python-ci.yml
api/: .env.sample  db.py  hello.py  main.py  migrate_db.py  seed.py
api/auth/: auth2.py  authentication.py  hash.py
api/cruds/: comments.py  places.py  plans.py  users.py
api/models/: models.py
api/routers/: comment.py  plans.py  sample.py  users.py
api/schemas/: comment.py  place.py  plan.py  user.py
app/: hello.py
